=== HEAD

* Fix aliasing columns in the JDBC adapter (per.melin) (#263)

* Make Database#rename_table remove the cached schema entry for the table (jeremyevans)

* Make Database schema sql methods private (jeremyevans)

* Deprecate Database #multi_threaded? and #logger (jeremyevans)

* Make Dataset#where always affect the WHERE clause (jeremyevans)

* Deprecate Object#blank? and related extensions, require 'sequel/extensions/blank' to get them back (jeremyevans)

* Move lib/sequel_core into lib/sequel and lib/sequel_model into lib/sequel/model (jeremyevans)

* Remove Sequel::Schema::SQL module, move methods into Sequel::Database (jeremyevans)

* Support creating and dropping schema qualified views (jeremyevans)

* Fix saving a newly inserted record in an after_create or after_save hook (jeremyevans)

* Deprecate Dataset#print and PrettyTable, require 'sequel/extensions/pretty_table' if you want them (jeremyevans)

* Deprecate Database#query and Dataset#query, require 'sequel/extensions/query' if you want them (jeremyevans)

* Deprecate Dataset#paginate and #each_page, require 'sequel/extensions/pagination' if you want them (jeremyevans)

* Fix ~{:bool_col=>true} and related inversions of boolean values (jeremyevans)

* Add disable_insert_returning method to PostgreSQL datasets, so they fallback to just using INSERT (jeremyevans)

* Don't use savepoints by default on PostgreSQL, use the :savepoint option to Database#transaction to use a savepoint (jeremyevans)

* Deprecate Database#transaction accepting a server symbol argument, use an options hash with the :server option (jeremyevans)

* Add Model.use_transactions for setting whether models should use transactions when destroying/saving records (jeremyevans, mjwillson)

* Deprecate Model::Validation::Errors, use Model::Errors (jeremyevans)

* Deprecate string inflection methods, require 'sequel/extensions/inflector' if you use them (jeremyevans)
